--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"scripts": {
 		"build:orm": "turbo run build --filter drizzle-orm --color",
+   "build:kit": "turbo run build --filter drizzle-kit --color",
 		"build": "turbo run build test:types //#lint --color",
 		"b": "pnpm build",
 		"pack": "turbo run pack --color",
@@ -39,5 +40,8 @@
 		"turbo": "^2.2.3",
 		"typescript": "5.6.3"
 	},
-	"packageManager": "pnpm@9.7.0"
+	"packageManager": "pnpm@9.7.0",
+  "resolutions": {
+      "better-sqlite3": "^11.7.0"
+  }
 }
